add new website from server na

--- a/xem-phim-bo/lam-lai-cuoc-doi-cua-chung-ta/index.html
+++ b/xem-phim-bo/lam-lai-cuoc-doi-cua-chung-ta/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1659,40 +1659,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/doi-tu-van-chia-tay" title="Đội tư vấn chia tay">
+          <a class="list-top-movie-link" href="/phim-moi/hoc-vien-sieu-anh-hung" title="Học Viện Siêu Anh Hùng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-tu-van-chia-tay-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoc-vien-sieu-anh-hung-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đội tư vấn chia tay
+             Học Viện Siêu Anh Hùng
             </span>
             <span class="list-top-movie-item-en">
-             The Breaker Upperers
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/alita-thien-than-chien-binh" title="Alita: Thiên Thần Chiến Binh">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/alita-thien-than-chien-binh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Alita: Thiên Thần Chiến Binh
-            </span>
-            <span class="list-top-movie-item-en">
-             Alita: Battle Angel
+             My Hero Academia
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1703,18 +1681,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/aladdin" title="Aladdin">
+          <a class="list-top-movie-link" href="/phim-moi/ke-dam-len-phan-2" title="Kẻ Đâm Lén Phần 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/aladdin-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-dam-len-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Aladdin
+             Kẻ Đâm Lén Phần 2
             </span>
             <span class="list-top-movie-item-en">
-             Aladdin
+             Knives Out Season 2
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1725,21 +1703,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-hai-huoc-nguoi-ban-thoi-tho-au-se-khong-thua" title="Tình yêu hài hước: Người Bạn Thời thơ ấu sẽ không thua">
+          <a class="list-top-movie-link" href="/phim-moi/lang-khach-kenshin-truy-tim-ky-uc" title="Lãng khách Kenshin: Truy tìm ký ức">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-hai-huoc-nguoi-ban-thoi-tho-au-se-khong-thua-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lang-khach-kenshin-truy-tim-ky-uc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tình yêu hài hước: Người Bạn Thời thơ ấu sẽ không thua
+             Lãng khách Kenshin: Truy tìm ký ức
             </span>
             <span class="list-top-movie-item-en">
-             Osananajimi ga Zettai ni Makenai Love Comedy,
+             るろうに剣心 -明治剣客浪漫谭- 追忆编
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1747,21 +1725,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/rise-of-the-footsoldier-4-marbella" title="Rise of the Footsoldier 4: Marbella">
+          <a class="list-top-movie-link" href="/phim-moi/vuong-trieu-cuoi-cung-phan-4" title="Vương triều cuối cùng (Phần 4)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/rise-of-the-footsoldier-4-marbella-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vuong-trieu-cuoi-cung-phan-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Rise of the Footsoldier 4: Marbella
+             Vương triều cuối cùng (Phần 4)
             </span>
             <span class="list-top-movie-item-en">
-             Rise of the Footsoldier 4: Marbella
+             The Last Kingdom (Season 4)
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dai-chien-thong-gia" title="Đại chiến thông gia">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-chien-thong-gia-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Đại chiến thông gia
+            </span>
+            <span class="list-top-movie-item-en">
+             Jumping the Broom
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
