add new website from server na

--- a/xem-phim-bo/that-hinh-dai-toi-tu-ky-si-khai-huyen/index.html
+++ b/xem-phim-bo/that-hinh-dai-toi-tu-ky-si-khai-huyen/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1674,28 +1674,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hùng Long Phong Bá (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Brothers For Life (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             54 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
            <span class="status">
             HD Vietsub
@@ -1708,6 +1686,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             54 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hùng Long Phong Bá (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Brothers For Life (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              54 lượt xem
@@ -1753,18 +1753,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguyen-lieu-vi-yeu" title="Nguyện liều vì yêu">
+          <a class="list-top-movie-link" href="/phim-moi/thuc-doi-tinh-yeu-toi" title="Thức Đợi Tình Yêu Tới">
            <span class="status">
-            HD Vietsub
+            FHD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguyen-lieu-vi-yeu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thuc-doi-tinh-yeu-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nguyện liều vì yêu
+             Thức Đợi Tình Yêu Tới
             </span>
             <span class="list-top-movie-item-en">
-             Desperados
+             Mr. Insomnia Waiting for Love
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/cha-me-cuoi-tuan" title="Cha Mẹ Cuối Tuần">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cha-me-cuoi-tuan-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cha Mẹ Cuối Tuần
+            </span>
+            <span class="list-top-movie-item-en">
+             Full Love
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1775,21 +1797,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khi-mua-hoa-gap-uoc-mo" title="Khi mùa hoa gặp ước mơ">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-lan-tinh-giac" title="Những lần tỉnh giấc">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khi-mua-hoa-gap-uoc-mo-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-lan-tinh-giac-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Khi mùa hoa gặp ước mơ
+             Những lần tỉnh giấc
             </span>
             <span class="list-top-movie-item-en">
-             Sixteen Upsetting
+             Awakenings
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             6 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1797,21 +1819,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quy-ong-jack-phan-1" title="Quý Ông Jack (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/nha-bup-be-cua-gabby-phan-2" title="Nhà búp bê của Gabby (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quy-ong-jack-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-bup-be-cua-gabby-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Quý Ông Jack (Phần 1)
+             Nhà búp bê của Gabby (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Gentleman Jack (Season 1)
+             Gabby's Dollhouse (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1819,43 +1841,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/luther-mat-troi-lan" title="Luther: Mặt trời lặn">
+          <a class="list-top-movie-link" href="/phim-moi/firefly-lane-phan-2" title="Firefly Lane (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/luther-mat-troi-lan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/firefly-lane-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Luther: Mặt trời lặn
+             Firefly Lane (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Luther: The Fallen Sun
+             Firefly Lane (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/song-sinh-tim-lai" title="Song Sinh Tìm Lại">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/song-sinh-tim-lai-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Song Sinh Tìm Lại
-            </span>
-            <span class="list-top-movie-item-en">
-             The Skeleton Twins
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
