add new website from server na

--- a/xem-phim-bo/khi-hoa-rung-no-ro/index.html
+++ b/xem-phim-bo/khi-hoa-rung-no-ro/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             9
+             10
             </dd>
             <br/>
            </dl>
@@ -1715,18 +1715,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-me-robot" title="Người mẹ Robot">
+          <a class="list-top-movie-link" href="/phim-moi/nam-47-den-toi" title="Năm 47 Đen Tối">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-me-robot-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nam-47-den-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người mẹ Robot
+             Năm 47 Đen Tối
             </span>
             <span class="list-top-movie-item-en">
-             I Am Mother
+             Black '47
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1737,18 +1737,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phong-than-thich-sat-to-dat-ky" title="Phong Thần Thích Sát Tô Đát Kỷ">
+          <a class="list-top-movie-link" href="/phim-moi/chuyen-kinh-di-my-8-tan-the" title="Chuyện Kinh Dị Mỹ 8: Tận Thế">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phong-than-thich-sat-to-dat-ky-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-kinh-di-my-8-tan-the-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phong Thần Thích Sát Tô Đát Kỷ
+             Chuyện Kinh Dị Mỹ 8: Tận Thế
             </span>
             <span class="list-top-movie-item-en">
-             Assassination The Queen
+             American Horror Story: Apocalypse (Season 8)
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ma-tran-2-tai-lap" title="Ma Trận 2: Tái Lập">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ma-tran-2-tai-lap-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Ma Trận 2: Tái Lập
+            </span>
+            <span class="list-top-movie-item-en">
+             The Matrix Reloaded
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/lien-ket-an-yeu-chet" title="Liên kết: Ăn, Yêu, Chết">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/link-eat-love-kill-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Liên kết: Ăn, Yêu, Chết
+            </span>
+            <span class="list-top-movie-item-en">
+             Link: Eat, Love, Kill
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1759,62 +1803,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/grizzy-va-hoi-lemmut-phan-1" title="Grizzy và hội lemmut (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/choi-lon" title="Chơi Lớn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/grizzy-va-hoi-lemmut-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/choi-lon-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Grizzy và hội lemmut (Phần 1)
+             Chơi Lớn
             </span>
             <span class="list-top-movie-item-en">
-             Grizzy and the Lemmings (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-tinh-lang-giai-tri" title="Chuyện Tình Làng Giải Trí">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-tinh-lang-giai-tri-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chuyện Tình Làng Giải Trí
-            </span>
-            <span class="list-top-movie-item-en">
-             Chuyện Tình Làng Giải Trí
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chien-ham-my" title="Chiến Hạm Mỹ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chien-ham-my-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chiến Hạm Mỹ
-            </span>
-            <span class="list-top-movie-item-en">
-             American Warships
+             Big Match
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
